# rust-htmx-axum-template

./: .env-example  Cargo.toml  LICENSE  README.md  build-client.sh  bun.lockb  docker-compose.yml  generate.sh  plopfile.js
auth/adapters/in-memory-user-repository/: Cargo.toml
auth/adapters/in-memory-user-repository/src/: lib.rs
auth/adapters/mongo-user-repository/: Cargo.toml
auth/adapters/mongo-user-repository/src/: lib.rs
auth/auth-service/: Cargo.toml
auth/auth-service/src/: create_user.rs  delete_user.rs  get_user.rs  get_user_for_login.rs  get_users.rs  lib.rs  models.rs  ports.rs  service.rs  update_user.rs
auth/auth-service/src/ports/: user_repository.rs
libs/mongo-testcontainer/: Cargo.toml
libs/mongo-testcontainer/src/: lib.rs
main/: Cargo.toml
main/src/: auth.rs  environment.rs  main.rs
plop-templates/auth-service-command/: {{snakeCase command_name}}.rs.hbs
plop-templates/service-command/: {{snakeCase command_name}}.rs.hbs
plop-templates/service-repository/adapters/diesel-{{snakeCase aggregate_name}}-repository/: Cargo.toml.hbs
plop-templates/service-repository/adapters/diesel-{{snakeCase aggregate_name}}-repository/src/: diesel_{{snakeCase aggregate_name}}_repository.rs.hbs  lib.rs  records.rs
plop-templates/service-repository/adapters/in-memory-{{snakeCase aggregate_name}}-repository/: Cargo.toml.hbs
plop-templates/service-repository/adapters/in-memory-{{snakeCase aggregate_name}}-repository/src/: lib.rs.hbs
plop-templates/service-repository/ports/: {{snakeCase aggregate_name}}_repository.rs.hbs
plop-templates/service-skeleton/{{snakeCase service_name}}/{{kabobCase service_name}}-service/: Cargo.toml.hbs
plop-templates/service-skeleton/{{snakeCase service_name}}/{{kabobCase service_name}}-service/src/: lib.rs  ports.rs  service.rs.hbs
plop-templates/web-htmx-component/: {{snakeCase component_name}}.rs.hbs
plop-templates/web-htmx-resource-plural/: {{snakeCase resource_name}}.rs.hbs
plop-templates/web-htmx-resource-singular/: {{snakeCase resource_name}}.rs.hbs
plop-templates/worksite-service-command/: {{snakeCase command_name}}.rs.hbs
web-client/src/client/: common.css
web-client/src/server/: popup_menu.rs
web-htmx/: Cargo.toml
web-htmx/src/: components.rs  context.rs  lib.rs  livereload.rs  playground.rs  resources.rs  routes.rs  state.rs
web-htmx/src/components/: appshell.rs  empty_state.rs  logo.rs  nav.rs  not_found_message.rs  page.rs  page_content.rs  permission_required.rs  simple_form.rs  worker_profile_fieldset.rs
web-htmx/src/playground/: auth.rs  file_input.rs  form.rs  html_element.rs  htmx.rs  modal.rs  notifications.rs  page.rs
worksite/adapters/in-memory-worksite-repository/: Cargo.toml
worksite/adapters/in-memory-worksite-repository/src/: lib.rs
worksite/adapters/mongo-worksite-repository/: Cargo.toml
worksite/adapters/mongo-worksite-repository/src/: lib.rs
worksite/worksite-service/: Cargo.toml
worksite/worksite-service/src/: add_assessment.rs  add_location.rs  add_shift.rs  add_tag.rs  add_worker.rs  assign_tags.rs  assign_worker.rs  create_worksite.rs  csv_upload.rs  filter_workers.rs  get_assessment.rs  get_assessments.rs  get_tag.rs  get_tags.rs  get_worker.rs  get_workers.rs  get_worksite.rs  get_worksites.rs  lib.rs  models.rs  ports.rs  remove_assessment.rs  remove_tag.rs  remove_worker_from_shift.rs  service.rs  update_assessment.rs  update_tag.rs  update_worker.rs  update_worksite.rs
worksite/worksite-service/src/ports/: worksite_repository.rs
