[workspace]
resolver = "2"

members = [
          ##PLOP NEW PACKAGE HOOK##
          "auth/adapters/in-memory-user-repository",
          "auth/adapters/mongo-user-repository",
          "auth/auth-service",
          "auth/auth-service",
          "main",
          "web-client",
          "web-htmx",
          "web-macros",
          "worksite/adapters/in-memory-worksite-repository",
          "worksite/adapters/mongo-worksite-repository",
          "worksite/worksite-service",
          "libs/mongo-testcontainer",
]

[workspace.dependencies]

async-trait = { version = "0.1.73" }
axum = { version = "0.7.1" }
axum-extra = { version = "0.9.0", features = ["form", "cookie"] }
axum-flash = { version = "0.8.0" }
axum-login = { version = "0.10.2" }
axum-macros = { version = "0.4.0" }
chrono = { version = "0.4.31" }
csv = { version = "1.3.0" }
diesel = { version = "2.1.3", features = ["postgres", "chrono"] }
diesel-async = { version = "0.4.1" }
diesel_migrations = { version = "2.1.0" }
dotenvy = { version = "0.15.7" }
fake = { version = "2.9", features = ["derive"] }
futures = { version = "0.3.29" }
http = { version = "1.0.0" }
mongodb = { version = "2.7.1" }
nonempty = { version = "0.9.0" }
once_cell = { version = "1.18.0" }
password-auth = { version = "1.0.0" }
pretty_assertions = { version = "1.4.0" }
proc-macro2 = { version = "1.0.69" }
quote = { version = "1.0.33" }
rand = { version = "0.8.5" }
rscx = { version = "0.1.11" }
serde = { version = "1.0.188" }
serde_json = { version = "1.0.107" }
sha2 = { version = "0.10.8" }
sha256 = { version = "1.4.0" }
syn = { version = "2.0.38" }
testcontainers = { version = "0.15.0" }
thiserror = { version = "1.0" }
tokio = { version = "1.32.0" }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.0" }
tower-livereload = { version = "0.9.1" }
tower-sessions = { version = "0.7.0" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
typed-builder = { version = "0.18.0" }
uuid = { version = "1.4.1" }
validator = { version = "0.16.1", features = ["derive"] }
