[package]
name = "web-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, features = ["multipart"] }
axum-flash = { workspace = true }
axum-login = { workspace = true }
axum-extra = { workspace = true }
axum-macros = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
once_cell = { workspace = true }
rscx = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-livereload = { workspace = true }
web-client = { path = "../web-client" }
web-macros = { path = "../web-macros" }
worksite-service = { path = "../worksite/worksite-service" }
auth-service = { path = "../auth/auth-service" }
# It is bad that this is here. We should find a way to get the AuthContext type out
mongo-user-repository = { path = "../auth/adapters/mongo-user-repository" }
futures = { workspace = true }
validator = { workspace = true }
