[package]
name = "mongo-testcontainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
mongodb = { workspace = true }
